# RAG-Document-Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirements_docker.txt
alembic/: env.py
alembic/versions/: 07e877a5471b_add_refresh_tokens_table.py  08e33c36685a_add_conversations_table.py  1b14ce470cd2_add_user_memories_table.py  d24ecd285cff_create_users_table.py
core/: config.py  security.py
models/: user.py
routes/: auth.py  routes.py
schemas/: user.py
services/: chroma_service.py  ollama_service.py  pdf_service.py  progress_service.py  reranker_service.py
tests/: test_auth.py  test_chroma_service.py  test_pdf_service.py  test_routes.py
