[project]
name = "rag-document-asistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==0.5.23",
    "fastapi>=0.129.2",
    "httpx>=0.28.1",
    "pdfplumber>=0.11.9",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.7.2",
    "pytest>=9.0.2",
    "python-multipart>=0.0.22",
    "ruff>=0.15.2",
    "sentence-transformers>=5.2.3",
    "uvicorn>=0.41.0",
]
